--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -60,8 +60,8 @@
       <arg value="${jenkins.server}" />
       <arg value="build" />
       <arg value="${jenkins.job.name}" />
-      <arg value="${jenkins.changes}" />
-      <arg value="${jenkins.wait}" />
+      <arg value="${jenkins.job.changes}" />
+      <arg value="${jenkins.job.wait}" />
     </java>
   </target>
 
