git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3334 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/ant/build.xml
@@ -73,4 +73,20 @@
     </java>
   </target>
 
+  <target name="version">
+    <java classname="${jenkins.cli.classname}">
+      <arg value="-s" />
+      <arg value="${jenkins.server}" />
+      <arg value="version" />
+    </java>
+  </target>
+
+  <target name="who">
+    <java classname="${jenkins.cli.classname}">
+      <arg value="-s" />
+      <arg value="${jenkins.server}" />
+      <arg value="who-am-i" />
+    </java>
+  </target>
+
 </project>
