--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -120,7 +120,7 @@
       <properties>
         <jenkins.mvn.goals>release:prepare release:perform -B -e</jenkins.mvn.goals>
         <jenkins.job.type>release</jenkins.job.type>
-        <jenkins.job.description>Create an official Kuali release. Deploy artifacts to S3, generate Maven web site, sync to Maven Central</jenkins.job.description>
+        <jenkins.job.description>Create an official Kuali release. Deploy artifacts to S3, generate the Maven web site, sync artifacts to Maven Central</jenkins.job.description>
         <jenkins.template.type>release</jenkins.template.type>
         <jenkins.postbuild.targets>deploy nexus:staging-close nexus:staging-release -Pkuali-release,sonatype-oss-release -DskipTests -e</jenkins.postbuild.targets>
         <jenkins.postbuild.pom>target/checkout/pom.xml</jenkins.postbuild.pom>
