--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -190,6 +190,15 @@
       </properties>
     </profile>
     <profile>
+      <id>mvncommon</id>
+      <properties>
+        <jenkins.project.scm.url>${svn.foundation.repo}/trunk/maven-kuali-common</jenkins.project.scm.url>
+        <jenkins.project.groupId>org.kuali.maven.common</jenkins.project.groupId>
+        <jenkins.project.artifactId>maven-kuali-common</jenkins.project.artifactId>
+        <jenkins.project.majorVersion>1.1</jenkins.project.majorVersion>
+      </properties>
+    </profile>
+    <profile>
       <id>threads</id>
       <properties>
         <jenkins.project.scm.url>${svn.foundation.repo}/trunk/kuali-threads</jenkins.project.scm.url>
