--- a/maven-kuali-common/pom.xml
+++ b/maven-kuali-common/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.kuali.maven.common</groupId>
   <artifactId>maven-kuali-common</artifactId>
-  <version>1.1.0</version>
+  <version>1.1.1-SNAPSHOT</version>
   <name>Kuali Maven Common</name>
   <description>Contains software that is common to maven development.  Facilitates reuse of code between plugins</description>
   <url>http://${kuali.site.hostname}/maven/common/${project.artifactId}/${project.version}/</url>
@@ -17,9 +17,9 @@
     <slf4j.version>1.6.4</slf4j.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-kuali-common-1.1.0</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-kuali-common-1.1.0</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/maven-kuali-common-1.1.0</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kuali-common</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kuali-common</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/maven-kuali-common</url>
   </scm>
   <dependencies>
     <dependency>
