--- a/maven-ksite-plugin/pom.xml
+++ b/maven-ksite-plugin/pom.xml
@@ -23,7 +23,7 @@
     <dependency>
       <groupId>org.kuali.maven.common</groupId>
       <artifactId>maven-kuali-common</artifactId>
-      <version>1.1.0-SNAPSHOT</version>
+      <version>1.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
