git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3349 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -59,6 +59,7 @@
         <ant.phase>none</ant.phase>
         <ant.file>target/classes/org/kuali/cm/jenkins/ant/build.xml</ant.file>
         <ant.java.fork>true</ant.java.fork>
+        <ant.java.failonerror>true</ant.java.failonerror>
         <jenkins.server>http://ec2-107-20-11-86.compute-1.amazonaws.com:8081/</jenkins.server>
         <jenkins.cli.classname>hudson.cli.CLI</jenkins.cli.classname>
         <jenkins.cli.wait>-s</jenkins.cli.wait>
