--- a/maven-ksite-plugin/pom.xml
+++ b/maven-ksite-plugin/pom.xml
@@ -9,7 +9,7 @@
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-ksite-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <name>Maven Kuali Site Plugin</name>
   <description>This plugin organizes/standardizes the Maven site publication process for the Kuali organization</description>
   <url>http://${kuali.site.hostname}/maven/plugins/${project.artifactId}/${project.version}/</url>
@@ -98,8 +98,8 @@
     </dependency>
   </dependencies>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-ksite-plugin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-ksite-plugin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/maven-ksite-plugin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-ksite-plugin-1.1.0</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-ksite-plugin-1.1.0</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/tags/maven-ksite-plugin-1.1.0</url>
   </scm>
 </project>
