git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3354 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -161,6 +161,13 @@
       </properties>
     </profile>
     <profile>
+      <id>help</id>
+      <properties>
+        <ant.target>help</ant.target>
+        <ant.phase>install</ant.phase>
+      </properties>
+    </profile>
+    <profile>
       <id>get</id>
       <properties>
         <ant.target>get</ant.target>
