git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3355 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -168,6 +168,13 @@
       </properties>
     </profile>
     <profile>
+      <id>cli</id>
+      <properties>
+        <ant.target>cli</ant.target>
+        <ant.phase>install</ant.phase>
+      </properties>
+    </profile>
+    <profile>
       <id>get</id>
       <properties>
         <ant.target>get</ant.target>
