--- a/maven-kuali-skin/pom.xml
+++ b/maven-kuali-skin/pom.xml
@@ -30,10 +30,16 @@
 
   <groupId>org.kuali.maven.skins</groupId>
   <artifactId>maven-kuali-skin</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
 
   <name>Kuali Site Skin</name>
   <description>Kuali Site Skin</description>
 
+
+  <scm>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/maven-kuali-skin-1.1.0</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/maven-kuali-skin-1.1.0</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/tags/maven-kuali-skin-1.1.0</url>
+  </scm>
 </project>
 
