git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3367 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -245,5 +245,14 @@
         <jenkins.project.majorVersion>1.1</jenkins.project.majorVersion>
       </properties>
     </profile>
+    <profile>
+      <id>cloudfront</id>
+      <properties>
+        <jenkins.project.scm.url>${svn.foundation.repo}/trunk/maven-cloudfront-plugin</jenkins.project.scm.url>
+        <jenkins.project.groupId>org.kuali.maven.plugins</jenkins.project.groupId>
+        <jenkins.project.artifactId>maven-cloudfront-plugin</jenkins.project.artifactId>
+        <jenkins.project.majorVersion>1.1</jenkins.project.majorVersion>
+      </properties>
+    </profile>
   </profiles>
 </project>
