--- a/kuali-common/pom.xml
+++ b/kuali-common/pom.xml
@@ -25,7 +25,7 @@
   </parent>
   <groupId>org.kuali.pom</groupId>
   <artifactId>kuali-common</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
   <name>Kuali Common</name>
 
@@ -122,9 +122,9 @@
   </repositories>
 
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/kuali-common</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/kuali-common</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/trunk/kuali-common</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-common-1.0.0</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-common-1.0.0</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/tags/kuali-common-1.0.0</url>
   </scm>
 
   <profiles>
