git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3386 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -70,6 +70,7 @@
     <profile>
       <id>jenkins</id>
       <properties>
+        <jenkins.build.timstamp>${kuali.build.timestamp}</jenkins.build.timstamp>
         <maven.test.skip>true</maven.test.skip>
         <ant.target>none</ant.target>
         <ant.phase>none</ant.phase>
