git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3387 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -255,5 +255,14 @@
         <jenkins.project.majorVersion>1.1</jenkins.project.majorVersion>
       </properties>
     </profile>
+    <profile>
+      <id>cmtools</id>
+      <properties>
+        <jenkins.project.scm.url>${svn.foundation.repo}/trunk/cm-tools</jenkins.project.scm.url>
+        <jenkins.project.groupId>org.kuali.cm</jenkins.project.groupId>
+        <jenkins.project.artifactId>cm-tools</jenkins.project.artifactId>
+        <jenkins.project.majorVersion>1.0</jenkins.project.majorVersion>
+      </properties>
+    </profile>
   </profiles>
 </project>
