--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -20,16 +20,16 @@
   <description>Configuration Management Tools</description>
   <groupId>org.kuali.cm</groupId>
   <artifactId>cm-tools</artifactId>
-  <version>1.0.7</version>
+  <version>1.0.8-SNAPSHOT</version>
   <properties>
     <kuali.testjar.phase>none</kuali.testjar.phase>
     <antrun.version>1.7</antrun.version>
     <svn.foundation.repo>http://svn.kuali.org/repos/foundation</svn.foundation.repo>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/cm-tools-1.0.7</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/cm-tools-1.0.7</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/tags/cm-tools-1.0.7</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/cm-tools</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/cm-tools</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/trunk/cm-tools</url>
   </scm>
   <build>
     <resources>
