--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -70,7 +70,6 @@
     <profile>
       <id>jenkins</id>
       <properties>
-        <jenkins.build.timstamp>${kuali.build.timestamp}</jenkins.build.timstamp>
         <maven.test.skip>true</maven.test.skip>
         <ant.target>none</ant.target>
         <ant.phase>none</ant.phase>
@@ -88,7 +87,40 @@
         <jenkins.git.branch>master</jenkins.git.branch>
       </properties>
       <build>
+        <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+            <includes>
+              <include>**/jenkins/jobs/**/*.xml</include>
+            </includes>
+          </resource>
+          <resource>
+            <directory>src/main/resources</directory>
+            <filtering>false</filtering>
+            <excludes>
+              <exclude>**/jenkins/jobs/**/*.xml</exclude>
+            </excludes>
+          </resource>
+        </resources>
         <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>buildnumber-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>create-timestamp</id>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>create-timestamp</goal>
+                </goals>
+                <configuration>
+                  <timestampFormat>yyyy-MM-dd HH:mm z</timestampFormat>
+                  <timestampPropertyName>jenkins.build.timestamp</timestampPropertyName>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
           <plugin>
             <artifactId>maven-antrun-plugin</artifactId>
             <configuration>
