--- a/kversion-maven-plugin/pom.xml
+++ b/kversion-maven-plugin/pom.xml
@@ -2,56 +2,34 @@
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.kuali</groupId>
+    <groupId>org.kuali.pom</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>15</version>
+    <version>1.0.1</version>
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
-  <artifactId>maven-http-plugin</artifactId>
-  <version>1.0.3-SNAPSHOT</version>
+  <artifactId>kversion.maven.plugin</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
-  <name>Maven HTTP Plugin</name>
-  <description>Tools for allowing Maven to interact with the HTTP protocol</description>
+  <name>Maven Version Plugin</name>
+  <description>Tools for working with Maven version numbers</description>
   <properties>
-    <kuali.slf4j.version>1.6.1</kuali.slf4j.version>
+    <kuali.slf4j.version>1.6.4</kuali.slf4j.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-http-plugin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-http-plugin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/maven-http-plugin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/kversion-maven-plugin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/kversion-maven-plugin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/kversion-maven-plugin</url>
   </scm>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>2.0.6</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-beanutils</groupId>
-      <artifactId>commons-beanutils</artifactId>
-      <version>1.8.3</version>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
+      <version>3.0.3</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-httpclient</groupId>
-      <artifactId>commons-httpclient</artifactId>
-      <version>3.1</version>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
