--- a/kversion-maven-plugin/pom.xml
+++ b/kversion-maven-plugin/pom.xml
@@ -27,6 +27,11 @@
       <version>3.0.3</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-core</artifactId>
+      <version>3.0.3</version>
+    </dependency>
+    <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
