git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3420 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kversion-maven-plugin/pom.xml
+++ b/kversion-maven-plugin/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0.1</version>
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
-  <artifactId>kversion.maven.plugin</artifactId>
+  <artifactId>kversion-maven-plugin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Version Plugin</name>
