--- a/kuali/pom.xml
+++ b/kuali/pom.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright 2004-2011 The Kuali Foundation
+  Copyright 2004-2011 The Kuali Foundation
 
-    Licensed under the Educational Community License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+  Licensed under the Educational Community License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
 
-    http://www.opensource.org/licenses/ecl2.php
+  http://www.opensource.org/licenses/ecl2.php
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -599,6 +599,7 @@
         </plugins>
       </build>
     </profile>
+
     <profile>
       <id>kuali-release</id>
       <build>
@@ -688,5 +689,123 @@
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <id>jenkins</id>
+      <properties>
+        <maven.test.skip>true</maven.test.skip>
+        <ant.target>none</ant.target>
+        <ant.phase>none</ant.phase>
+        <ant.file>target/classes/org/kuali/cm/jenkins/ant/build.xml</ant.file>
+        <ant.java.fork>true</ant.java.fork>
+        <ant.java.failonerror>true</ant.java.failonerror>
+        <jenkins.server>http://ec2-107-20-11-86.compute-1.amazonaws.com:8081/</jenkins.server>
+        <jenkins.cli.classname>hudson.cli.CLI</jenkins.cli.classname>
+        <jenkins.cli.wait>-s</jenkins.cli.wait>
+        <jenkins.cli.changes>-c</jenkins.cli.changes>
+        <jenkins.cli.version>1.440</jenkins.cli.version>
+        <jenkins.job.name>${jenkins.project.artifactId}-${jenkins.project.majorVersion}-${jenkins.job.type}</jenkins.job.name>
+        <jenkins.job.file>target/classes/org/kuali/cm/jenkins/jobs/${jenkins.template.type}-${jenkins.project.scm.type}-template.xml</jenkins.job.file>
+        <jenkins.project.scm.type>svn</jenkins.project.scm.type>
+        <jenkins.git.branch>master</jenkins.git.branch>
+        <jenkins.project.groupId>${project.groupId}</jenkins.project.groupId>
+        <jenkins.project.artifactId>${project.artifactId}</jenkins.project.artifactId>
+        <jenkins.project.scm.url>${project.scm.url}</jenkins.project.scm.url>
+        <jenkins.project.majorVersion>${majorVersion}</jenkins.project.majorVersion>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>version-maven-plugin</artifactId>
+            <version>1.0.0</version>
+            <executions>
+              <execution>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>get-major-version</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>buildnumber-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>create-timestamp</id>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>create-timestamp</goal>
+                </goals>
+                <configuration>
+                  <timestampFormat>yyyy-MM-dd HH:mm z</timestampFormat>
+                  <timestampPropertyName>jenkins.build.timestamp</timestampPropertyName>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.3</version>
+            <executions>
+              <execution>
+                <id>copy-cm-tools</id>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>copy</goal>
+                  <goal>unpack</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.kuali.cm</groupId>
+                      <artifactId>cm-tools</artifactId>
+                      <version>${kuali.cm.tools.version}</version>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>2.5</version>
+            <executions>
+              <execution>
+                <id>copy-resources</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>copy-resources</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>${project.build.directory}/filtered</outputDirectory>
+                  <resources>
+                    <resource>
+                      <directory>${project.build.directory}/dependency</directory>
+                      <filtering>true</filtering>
+                      <includes>
+                        <include>**/jenkins/jobs/**/*.xml</include>
+                      </includes>
+                    </resource>
+                    <resource>
+                      <directory>${project.build.directory}/dependency</directory>
+                      <filtering>false</filtering>
+                      <includes>
+                        <include>**/jenkins/**/*</include>
+                      </includes>
+                      <excludes>
+                        <exclude>**/jenkins/jobs/**/*.xml</exclude>
+                      </excludes>
+                    </resource>
+                  </resources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
   </profiles>
 </project>
