--- a/version-maven-plugin/pom.xml
+++ b/version-maven-plugin/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>version-maven-plugin</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Version Plugin</name>
   <description>Tools for working with Maven version numbers</description>
@@ -16,9 +16,9 @@
     <kuali.slf4j.version>1.6.4</kuali.slf4j.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/version-maven-plugin-1.0.1</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/version-maven-plugin-1.0.1</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/version-maven-plugin-1.0.1</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/version-maven-plugin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/version-maven-plugin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/version-maven-plugin</url>
   </scm>
   <dependencies>
     <dependency>
