--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -68,25 +68,15 @@
   </developers>
   <profiles>
     <profile>
-      <id>jenkins</id>
+      <id>ci</id>
       <properties>
-        <maven.test.skip>true</maven.test.skip>
-        <ant.target>none</ant.target>
-        <ant.phase>none</ant.phase>
-        <ant.file>target/classes/org/kuali/cm/jenkins/ant/build.xml</ant.file>
-        <ant.java.fork>true</ant.java.fork>
-        <ant.java.failonerror>true</ant.java.failonerror>
-        <jenkins.server>http://ec2-107-20-11-86.compute-1.amazonaws.com:8081/</jenkins.server>
-        <jenkins.cli.classname>hudson.cli.CLI</jenkins.cli.classname>
-        <jenkins.cli.wait>-s</jenkins.cli.wait>
-        <jenkins.cli.changes>-c</jenkins.cli.changes>
         <jenkins.cli.version>1.440</jenkins.cli.version>
-        <jenkins.job.name>${jenkins.project.artifactId}-${jenkins.project.majorVersion}-${jenkins.job.type}</jenkins.job.name>
-        <jenkins.job.file>target/classes/org/kuali/cm/jenkins/jobs/${jenkins.template.type}-${jenkins.project.scm.type}-template.xml</jenkins.job.file>
-        <jenkins.project.scm.type>svn</jenkins.project.scm.type>
-        <jenkins.git.branch>master</jenkins.git.branch>
       </properties>
       <build>
+        <filters>
+          <filter>src/main/resources/org/kuali/cm/jenkins/jenkins.properties</filter>
+          <filter>src/main/resources/org/kuali/cm/jenkins/${jobtype}.properties</filter>
+        </filters>
         <plugins>
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
@@ -135,17 +125,11 @@
     </profile>
     <profile>
       <id>release</id>
-      <properties>
-        <jenkins.mvn.goals>release:prepare release:perform -B -e</jenkins.mvn.goals>
-        <jenkins.job.type>release</jenkins.job.type>
-        <jenkins.job.description>Create an official Kuali release. Deploy artifacts to S3, generate the Maven web site,
-          sync artifacts to Maven Central</jenkins.job.description>
-        <jenkins.template.type>release</jenkins.template.type>
-        <jenkins.postbuild.targets>deploy nexus:staging-close nexus:staging-release -Pkuali-release,sonatype-oss-release
-          -DskipTests -e</jenkins.postbuild.targets>
-        <jenkins.postbuild.pom>target/checkout/pom.xml</jenkins.postbuild.pom>
-        <jenkins.postbuild.mavenName>(Default)</jenkins.postbuild.mavenName>
-      </properties>
+      <build>
+        <filters>
+          <filter>src/main/resources/org/kuali/cm/jenkins/release.properties</filter>
+        </filters>
+      </build>
     </profile>
     <profile>
       <id>publish</id>
