--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
@@ -1,6 +1,6 @@
 maven.test.skip=true
-ant.target=none
-ant.phase=none
+ant.target=noop
+ant.phase=process-resources
 ant.file=target/classes/org/kuali/cm/jenkins/ant/build.xml
 ant.java.fork=true
 ant.java.failonerror=true
