--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/publish.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/publish.properties
@@ -1,4 +1,4 @@
 jenkins.mvn.goals=clean deploy site-deploy -Pkuali-release
 jenkins.job.type=publish
-jenkins.job.description=Deploy artifacts to S3 using the "kuali-release" profile. This is the same profile that activates during an official release. Also, invokes site-deploy to publish the Maven web site
+jenkins.job.description=Publish this project for use by the public.  Deploy artifacts to S3 using the "kuali-release" profile, invoke site-deploy to publish the Maven web site
 jenkins.template.type=simple
