git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3448 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -72,6 +72,7 @@
       <properties>
         <p>empty</p>
         <type>empty</type>
+        <cmd>noop</cmd>
         <ant.target>${cmd}</ant.target>
         <jenkins.cli.version>1.440</jenkins.cli.version>
         <jenkins.job.type>${type}</jenkins.job.type>
