git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3459 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jenkins.properties
@@ -5,6 +5,6 @@ jenkins.cli.classname=hudson.cli.CLI
 jenkins.cli.wait=-s
 jenkins.cli.changes=-c
 jenkins.job.name=${jenkins.project.artifactId}-${jenkins.project.majorVersion}-${jenkins.job.type}
-jenkins.job.file=target/classes/org/kuali/cm/jenkins/jobs/${jenkins.template.type}-${jenkins.project.scm.type}-template.xml
+jenkins.job.file=target/classes/org/kuali/cm/jenkins/jobs/template-${jenkins.template.type}-${jenkins.project.scm.type}.xml
 jenkins.project.scm.type=svn
 jenkins.git.branch=master
