git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3460 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/publish.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/publish.properties
@@ -1,4 +1,4 @@
 jenkins.mvn.goals=clean deploy site-deploy -Pkuali-release
 jenkins.job.type=publish
-jenkins.job.description=Publish this project for use by the public.  Deploy artifacts to S3 using the "kuali-release" profile, invoke site-deploy to publish the Maven web site
+jenkins.job.description=Publish a SNAPSHOT version of this project.  Deploy artifacts to S3 using the "kuali-release" profile, invoke site-deploy to publish the Maven web site
 jenkins.template.type=simple
