git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3461 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/maven-kuali-common.properties
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/projects/maven-kuali-common.properties
@@ -1,1 +1,4 @@
-# Just an empty properties file so Maven doesn't barf
+jenkins.project.scm.url=${svn.foundation.repo}/trunk/maven-kuali-common
+jenkins.project.groupId=org.kuali.maven.common
+jenkins.project.artifactId=maven-kuali-common
+jenkins.project.majorVersion=1.1
