--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -25,6 +25,9 @@
     <kuali.testjar.phase>none</kuali.testjar.phase>
     <antrun.version>1.7</antrun.version>
     <maven.test.skip>true</maven.test.skip>
+    <jenkins.cli.version>1.440</jenkins.cli.version>
+    <ant.file>target/classes/org/kuali/cm/jenkins/ant/build.xml</ant.file>
+    <ant.phase>process-resources</ant.phase>
   </properties>
   <scm>
     <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/cm-tools</connection>
@@ -52,7 +55,28 @@
       <plugins>
         <plugin>
           <artifactId>maven-antrun-plugin</artifactId>
-          <version>${antrun.version}</version>
+          <configuration>
+            <target>
+              <property name="maven.plugin.classpath" refid="maven.plugin.classpath" />
+              <ant antfile="${ant.file}" target="${ant.target}" />
+            </target>
+          </configuration>
+          <executions>
+            <execution>
+              <id>ant-run</id>
+              <phase>${ant.phase}</phase>
+              <goals>
+                <goal>run</goal>
+              </goals>
+            </execution>
+          </executions>
+          <dependencies>
+            <dependency>
+              <groupId>org.jenkins</groupId>
+              <artifactId>jenkins-cli</artifactId>
+              <version>${jenkins.cli.version}</version>
+            </dependency>
+          </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -71,9 +95,6 @@
       <id>ci</id>
       <properties>
         <ant.target>${cmd}</ant.target>
-        <ant.file>target/classes/org/kuali/cm/jenkins/ant/build.xml</ant.file>
-        <ant.phase>process-resources</ant.phase>
-        <jenkins.cli.version>1.440</jenkins.cli.version>
         <jenkins.job.type>${job}</jenkins.job.type>
         <jenkins.project.name>${p}</jenkins.project.name>
       </properties>
@@ -104,28 +125,6 @@
           </plugin>
           <plugin>
             <artifactId>maven-antrun-plugin</artifactId>
-            <configuration>
-              <target>
-                <property name="maven.plugin.classpath" refid="maven.plugin.classpath" />
-                <ant antfile="${ant.file}" target="${ant.target}" />
-              </target>
-            </configuration>
-            <executions>
-              <execution>
-                <id>ant-run</id>
-                <phase>${ant.phase}</phase>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-              </execution>
-            </executions>
-            <dependencies>
-              <dependency>
-                <groupId>org.jenkins</groupId>
-                <artifactId>jenkins-cli</artifactId>
-                <version>${jenkins.cli.version}</version>
-              </dependency>
-            </dependencies>
           </plugin>
         </plugins>
       </build>
@@ -133,41 +132,16 @@
     <profile>
       <id>cli</id>
       <properties>
-        <ant.target>${cmd}</ant.target>
-        <ant.file>target/classes/org/kuali/cm/jenkins/ant/build.xml</ant.file>
-        <ant.phase>process-resources</ant.phase>
-        <jenkins.cli.version>1.440</jenkins.cli.version>
+        <ant.target>cli</ant.target>
+        <jenkins.cmd>${cmd}</jenkins.cmd>
       </properties>
       <build>
         <filters>
-          <filter>src/main/resources/org/kuali/cm/jenkins/kuali.properties</filter>
           <filter>src/main/resources/org/kuali/cm/jenkins/jenkins.properties</filter>
         </filters>
         <plugins>
           <plugin>
             <artifactId>maven-antrun-plugin</artifactId>
-            <configuration>
-              <target>
-                <property name="maven.plugin.classpath" refid="maven.plugin.classpath" />
-                <ant antfile="${ant.file}" target="${ant.target}" />
-              </target>
-            </configuration>
-            <executions>
-              <execution>
-                <id>ant-run</id>
-                <phase>${ant.phase}</phase>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-              </execution>
-            </executions>
-            <dependencies>
-              <dependency>
-                <groupId>org.jenkins</groupId>
-                <artifactId>jenkins-cli</artifactId>
-                <version>${jenkins.cli.version}</version>
-              </dependency>
-            </dependencies>
           </plugin>
         </plugins>
       </build>
